# apeterm

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: release.yml
assets/: sec_watchlist.json
broker/: README.md  requirements.txt  trade_republic.py
docs/: plugins.md
locales/: de.json  en.json
scripts/: house_ptr_extract.py  requirements.txt  yfinance_details.py  yfinance_stream.py
src/: app.rs  backend.rs  config.rs  db.rs  enrich.rs  event.rs  import.rs  main.rs  market.rs  metrics.rs  news.rs  preferences.rs  quotes.rs  search.rs  spotlight.rs  theme.rs  ui.rs
src/agent/: context.rs  controller.rs  llm_client.rs  messages.rs  mod.rs  openrouter.rs  tool_call.rs  tools.rs
src/ai/: client.rs  models.rs
src/app/: agent_panel.rs  dashboard.rs  mod.rs  news_feature.rs  notes_feature.rs  search_feature.rs  sec_feature.rs  settings_feature.rs  spotlight_panel.rs  watchlist_feature.rs
src/broker/: mod.rs  trade_republic.rs
src/db/: mod.rs  notes_repo.rs  sec_repo.rs
src/features/: mod.rs
src/features/agent/: context.rs  controller.rs  llm_client.rs  messages.rs  mod.rs  openrouter.rs  prompts.rs  state.rs  synthesis.rs  tool_call.rs  tools.rs  view.rs
src/i18n/: keys.rs  mod.rs
src/pages/: agent.rs  calendar.rs  dashboard.rs  mod.rs  news.rs  notes.rs  onboarding.rs  panel.rs  search.rs  sec.rs  settings.rs  spotlight.rs  watchlist.rs
src/plugins/: mod.rs  plugin.rs  registry.rs
src/sec/: client.rs  form4.rs  mod.rs  submissions.rs  sync.rs  thirteenf.rs  types.rs
src/ui/: fill.rs  mod.rs  panel.rs  util.rs
(+68 files in other folders)
