[package]
name = "apeterm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
crossterm = "0.29.0"
directories = "6.0"
dotenvy = "0.15"
fuzzy-matcher = "0.3"
ratatui = "0.30.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rss = "2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "native-tls"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.10"
